# mcp-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README-ko.md  README.md  pyproject.toml
mcp_pipeline/: __init__.py  decorators.py  server.py  state.py  status.py
tests/: test_pipeline.py
