[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pipeline"
version = "0.1.0"
description = "Stateful Pipeline framework for MCP servers — type-safe state, declarative tool chaining, token-efficient design"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Son Seong Joon", email = "sonsj97@plateer.com" },
]
keywords = ["mcp", "pipeline", "stateful", "agent", "tool", "llm", "token-efficient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp[cli]>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.8.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/SonAIengine/mcp-pipeline"
Repository = "https://github.com/SonAIengine/mcp-pipeline"
Issues = "https://github.com/SonAIengine/mcp-pipeline/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
